--- a/css/style.css
+++ b/css/style.css
@@ -15,61 +15,90 @@ h1, h2, h3, h4, h5{
     text-align: center;
 }
 
+/* UTILITIES */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+   }
+   body {
+    font-family: cursive;
+   }
+   a {
+    text-decoration: none;
+   }
+   li {
+    list-style: none;
+   }
 
 /*****************INIZIO HEADER********************/
-.header {
-    background-color: black;
+/* NAVBAR STYLING STARTS */
+.navbar {
     display: flex;
-    align-items:baseline;
-    justify-content: center;
-    height: 230px;
-}
-.menu{
-
-    color: white;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px;
+    background-color:black;
+    color: #fff;
+   }
+   .nav-links a {
+    color: #fff;
+   }
+   /* LOGO */
+   .logo {
+    font-size: 32px;
+   }
+   /* NAVBAR MENU */
+   .menu {
     display: flex;
-    margin-top: 30px;
-    float:right;
-    justify-content: space-around;
-}
-.menu li{
-    color: white;
-    display: block;
-    padding:2rem;
-    font-size: 1.5rem;
-}
-.menu>li:hover{
-    color: greenyellow;
-    font-size: 1.5rem;
-}
-a:hover{
-    color: greenyellow;
-}
-a{
-    text-decoration: none;
-}
-
-.dropdown{
-    color: white;
-    display: flex;
-}
-.dropdown-content{
+    gap: 1em;
+    font-size: 18px;
+   }
+   .menu li:hover {
+    background-color: yellowgreen;
+    border-radius: 5px;
+    transition: 0.3s ease;
+   }
+   .menu li {
+    padding: 5px 14px;
+   }
+   /* DROPDOWN MENU */
+   .services {
+    position: relative; 
+   }
+   .dropdown {
+    background-color: yellowgreen;
+    padding: 1em 0;
+    position: absolute; /*WITH RESPECT TO PARENT*/
     display: none;
-    position: absolute;
-}
-.dropdown-content>li{
-    font-size: 1.2rem;
-    margin: 0;
-    padding: 2px;
-}
-.dropdown-content>li:hover{
-    font-size: 1.2rem;
-    color: yellowgreen;
-}
-.dropdown:hover .dropdown-content {
+    border-radius: 8px;
+    top: 35px;
+   }
+   .dropdown li + li {
+    margin-top: 10px;
+   }
+   .dropdown li {
+    padding: 0.5em 1em;
+    width: 8em;
+    text-align: center;
+   }
+   .dropdown li:hover {
+    background-color: #4c9e9e;
+   }
+   .services:hover .dropdown {
     display: block;
-    padding-top: 1.2rem;
-}
+   }
+
+input[type=checkbox]{
+    display: none;
+   } 
+   /*HAMBURGER MENU*/
+   .hamburger {
+    display: none;
+    font-size: 60px;
+    user-select: none;
+   }
+
 /*****************FINE HEADER********************/
 
 /*****************INIZIO BODY********************/
@@ -87,13 +116,13 @@ body{
 
 .black {
     background-color: black;
-    opacity: 90%;
+    opacity: 80%;
 
 }
 
 .white{
     background-color: white;
-    opacity: 90%;
+    opacity: 100%;
 }
 
 
@@ -217,6 +246,42 @@ i {
 /********** Mobile only **********/
 
 @media (max-width: 767px){
+    .menu { 
+     display:none;
+     position: absolute;
+     background-color:yellowgreen;
+     right: 0;
+     left: 0;
+     text-align: center;
+     padding: 16px 0;
+     z-index: 10;
+     padding-top: 20px;
+    }
+    .menu li:hover {
+     display: inline-block;
+     background-color:#4c9e9e;
+     transition: 0.3s ease;
+    }
+    .menu li + li {
+     margin-top: 12px;
+    }
+    input[type=checkbox]:checked ~ .menu{
+     display: block;
+    }
+
+    .hamburger {
+     display: block;
+    }
+    .dropdown {
+     left: 50%;
+     top: 30px;
+     transform: translateX(35%);
+    }
+    .dropdown li:hover {
+     background-color: #4c9e9e;
+    }
+
+
     .grid{
         padding: 0px;
     }
