--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -269,6 +269,7 @@ form {
     padding: 15px;
     border: none;
     font-family: 'Questrial', sans-serif;
+    color: black;
   }
   
   .flex-outer li button {
