--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,7 +87,7 @@ body{
 }
 /*Classe banda orizzontale*/
 .grid{
-    padding: 3%;
+  padding: 5%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -181,7 +181,6 @@ i {
 
   .titlecert{
     width: 100%;
-    padding: 15px;
   }
 
 /**********INIZIO FORM CONTATTI*********************/
@@ -447,6 +446,12 @@ input[type=checkbox]:checked ~ .hamburger {
     .dropdown li:hover {
      background-color: black;
     }
+    .grid{
+      padding-top: 5%;
+      padding-bottom: 0;
+      padding-right: 0;
+      padding-left: 0;
+    }
     .reverse {
         flex-direction: column-reverse;
     }
@@ -478,5 +483,9 @@ input[type=checkbox]:checked ~ .hamburger {
   width: 100%;
   align-content: space-around;
   padding-bottom: 5%;
+}
+.titlecert{
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 }
