--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,8 +23,11 @@ h1, h2, h3, h4, h5{
 h1 {
   font-size: 30px;
 }
+#footerfont{
+  font-size: 12px;
+}
 /*****************INIZIO HEADER********************/
-/* NAVBAR STYLING STARTS */
+/* NAVBAR*/
 .navbar {
     display: flex;
     align-items: center;
@@ -95,7 +98,7 @@ body{
     text-align: center;
     min-height: 300px;
 }
-/*Classe background-color banda orizzontale*/
+/*Classi background-color banda orizzontale*/
 .blackbackground {
     background-color: black;
 }
@@ -178,7 +181,6 @@ i {
   .widthcertificate {
     width: 80%
   }
-
   .titlecert{
     width: 100%;
   }
@@ -295,10 +297,7 @@ form {
   }
 /**********FINE ANIMAZIONE OVERLAY IMMAGINE************/
 
-
-
 /**********INIZIO MEDIAQUERY**************************/
-
 /********** Large devices only **********/
 @media (min-width: 992px) {
   .logomobile{
