--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,9 @@ h1 {
 a{
   text-decoration: none;
 }
+p{
+  line-height: 1.3;
+}
 /*****************INIZIO HEADER********************/
 /* NAVBAR*/
 .navbar {
@@ -140,12 +143,13 @@ i {
 }
 .iconecontainer{
   min-width: auto;
-  min-height: 150px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
   text-align: center ;
+  padding-top: 6%;
+  padding-bottom: 6%;
 }
 .iconwhitetext{
   font-size: 1rem;
@@ -237,7 +241,7 @@ form {
   .flex-outer > li > label,
   .flex-outer li p {
     flex: 1 0 120px;
-    max-width: 220px;
+    max-width: 320px;
   }
   .flex-outer > li > label + *,
   .flex-inner {
@@ -386,10 +390,10 @@ input[type=checkbox]:checked ~ .hamburger {
      padding-bottom: 5%;
 }
 .col-form{
-    width: 30%;
+    width: 100%;
     font-size: 1.6rem;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     padding-top: 5%;
     padding-bottom: 5%;
     align-items: center;
@@ -467,9 +471,7 @@ input[type=checkbox]:checked ~ .hamburger {
         padding: 5%;
         font-size: 1.4rem;
    }
-   .iconecontainer{
-     padding-bottom: 25px;
-   }
+
    .col-form{
     width: 100%;
     font-size: 1.4rem;
