--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,6 +35,41 @@ a{
 p{
   line-height: 1.3;
 }
+
+/*BOTTONE UP*/
+#button {
+  display: inline-block;
+  background-color: none;
+  opacity: 0.6;
+  width: 40px;
+  height: 40px;
+  border-radius: 100px;
+  margin: 10px;
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  transition: .3s;
+  z-index: 1000;
+}
+#classiconbutton{
+  color: yellowgreen;
+  font-size: 40px;
+}
+#button:hover {
+  cursor: pointer;
+  opacity: 1;
+}
+#button:active {
+  background-color: #555;
+}
+.show{
+  visibility:hidden;
+}
+
+.txt-rotate{
+  color: yellowgreen;
+  background-color: black;
+}
 /*****************INIZIO HEADER********************/
 /* NAVBAR*/
 .navbar {
@@ -163,8 +198,9 @@ i {
 #icon{
   display: flex;
   flex-direction: column;
-    width: 25%;
-    align-items: center;
+  width: 25%;
+  align-items: center;
+
 }
 #icon>i, #icon>p{
   padding: 4%;
@@ -509,5 +545,8 @@ input[type=checkbox]:checked ~ .hamburger {
 .titlecert{
   padding-top: 20px;
   padding-bottom: 20px;
+}
+.iconecontainer{
+  padding-right: 5%;
 }
 }
