--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -474,7 +474,7 @@ input[type=checkbox]:checked ~ .hamburger {
      right: 0;
      left: 0;
      text-align: center;
-     padding: 16px 0;
+     padding: 16px 0px;
      z-index: 10;
      padding-top: 20px;
      margin-top: 52px;
